<resources>
    //basic info
    <string name="app_name">The RAGBRAI Trail</string>
    <string name="logo">RAGBRAI Trail Logo</string>

    //home page
    <string name="travel">Travel the trail</string>
    <string name="learn">Learn about the trail</string>
    <string name="end">Credits</string>
    <string name="HomePageButton">GO</string>

    //Credits
    <string name="titleCredits">Credits</string>
    <string name="samLaw">Sam Law - App Creator</string>
    <string name="markBecker">Mark Becker - App Creator</string>

    //About
    <string name="aboutTitle">About the Trail</string>
    <string name="aboutRAGBRAI">RAGBRAI is a seven day biking event in which participants bike across the entire state of Iowa. RAGBRAI will run for its 46th time in the upcoming summer. It is the oldest, largest, and longest recreational bike touring event in the world. It is an amazing journey and we would recommend riding it in real life!</string>

    //Choose Difficulty
    <string name="chooseDifficultyHeader">Many kinds of people ride RAGBRAI every year. You can be:</string>
    <string name="characterChoiceCollege">1.  A College Student</string>
    <string name="characterChoiceAccountant">2.  An Accountant</string>
    <string name="characterChoiceRetired">3.  A Retired Person</string>
    <string name="WhatsTheDifference">4.  Find out the difference between characters</string>

    //Difference between Characters
    <string name="characterDifferencesTitle">The Difference of Characters</string>
    <string name="CollegeInfo">1.  Picking a college student will give you a lot of energy to start the game, but not very much money.</string>
    <string name="accountantInfo">2.  Picking an accountant will give you a balanced supply of energy and money.</string>
    <string name="retiredInfo">3.  Picking a retired person will give you more money but less energy.</string>

    //Pick A Character Name
    <string name="characterQuestion">What is the Name of your Character?</string>

    //Buy Supplies
    <string name="Caseys">Casey\'s General Store</string>
    <string name="amountYouHave">Amount You Have: $</string>
    <string name="EnergyLevel">Energy Level:&#032;</string>
    <string name="FoodCost">Food            $1</string>
    <string name="HelmetCost">Helmet        $30</string>
    <string name="SparePartsCost">Spare Part        $50</string>
    <string name="QuantityHint">Quantity</string>
    <string name="buySuppliesButton">Buy Supplies</string>
    <string name="learnAboutProductsButton">Learn About Products</string>
    <string name="ContinueButton">Continue on the Trail</string>
    <string name="HelmetSupply">Helmets:&#032;</string>
    <string name="SparePartSupply">Spare Parts:&#032;</string>


    //Learn About Products
    <string name="learnAboutFood">1. Buying food will replenish energy instantly depending on how much you buy. One food object will give you one energy.</string>
    <string name="learnAboutHelmets">2. Buying a helmet will prevent injuries from accidents. Injuries can slow you down or even cause you to not complete the RAGBRAI trail.</string>
    <string name="learnAboutSpareParts">3. Buying spare parts can solve all kinds of problems. You will want to have spare parts just in case you have problems with your bike.</string>

    //Main Gameplay
    <string name="energyLabel">Energy Level:&#032;</string>
    <string name="distanceTraveledLabel">Distance Traveled:&#032;</string>
    <string name="distanceOfNextStop">Distance of Next Stop:&#032;</string>
    <string name="remainingDistance">Remaining Distance:&#032;</string>

    //You Lose
    <string name="gameOver">Game Over</string>
    <string name="loseDescription">You did not finish the RAGBRAI trail</string>
    <string name="btnLosePage">Try Again</string>
    <string name="losePicture">Sad Stick Figure</string>
    <string name="arrowPic">Arrow</string>

    //You Win
    <string name="youWinPicture">Happy Stick Figure</string>
    <string name="btnYouWin">Play Again</string>
    <string name="congrats">Congrats!</string>
    <string name="winPageDescription">You finished the RAGBRAI trail.</string>

    //Towns
    <string name="next">Next</string>
    <string name="titleTown1">Title Town 1</string>
    <string name="descriptionTown1">Description Town 1</string>
    <string name="titleTown2">Title Town 2</string>
    <string name="descriptionTown2">Description Town 2</string>
    <string name="titleTown3">Title Town 3</string>
    <string name="descriptionTown3">Description Town 3</string>
    <string name="titleTown4">Title Town 4</string>
    <string name="descriptionTown4">Description Town 4</string>
    <string name="titleTown5">Title Town 5</string>
    <string name="descriptionTown5">Description Town 5</string>
    <string name="titleTown6">Title Town 6</string>
    <string name="descriptionTown6">Description Town 6</string>
    <string name="titleTown7">Title Town 7</string>
    <string name="descriptionTown7">Description Town 7</string>
    <string name="titleTown8">Title Town 8</string>
    <string name="descriptionTown8">Description Town 8</string>

</resources>
