<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="markbecker.theragbraitrail.ChooseDifficulty">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/chooseDifficultyHeader"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="83dp"
            android:id="@+id/radioGroup2">

            <RadioButton
                android:id="@+id/characterChoiceCollege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/characterChoiceCollege"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/characterChoiceAccountant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:text="@string/characterChoiceAccountant"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/characterChoiceRetired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:text="@string/characterChoiceRetired"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/whatsTheDifference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/WhatsTheDifference"
                android:textAlignment="textStart"
                android:textSize="24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPickCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:text="@string/HomePageButton"
            android:textSize="30sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
