<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="markbecker.theragbraitrail.MainActivity">

    <RelativeLayout
        android:layout_width="397dp"
        android:layout_height="644dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_above="@+id/HomeScreenButton"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:paddingBottom="10dp"
                android:text="@string/travel"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:paddingBottom="10dp"
                android:text="@string/learn"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end"
                android:textSize="24sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioGroup"
            android:layout_alignEnd="@+id/radioGroup"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ragbrailogo" />

        <Button
            android:id="@+id/HomeScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:text="@string/HomePageButton"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
