<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="markbecker.theragbraitrail.LearnAboutProducts">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/learnAboutFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:text="@string/learnAboutFood"
            android:textColor="#dddddd"
            android:textSize="24sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/learnAboutHelmets" />

        <TextView
            android:id="@+id/learnAboutHelmets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learnAboutHelmets"
            android:textColor="#dddddd"
            android:textSize="24sp"
            android:layout_below="@+id/learnAboutFood"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/learnAboutSpareParts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/learnAboutSpareParts"
            android:textColor="#dddddd"
            android:textSize="24sp"
            android:layout_below="@+id/learnAboutHelmets"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
